[package]
name = "skyrim-cell-dump-wasm"
version = "0.1.3"
authors = ["Tyler Hallada <tyler@hallada.net>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
seahash = "4.1"
skyrim-cell-dump = "0.4"
wasm-bindgen = "0.2.83"
serde-wasm-bindgen = "0.4.3"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.33"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
